[package]
name = "glfw-vulkan"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["vulkan-library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vulkan-library = { version = "0.1.0", path = "./vulkan-library/" }
glfw = { version = "0.50.0", default-features = false, features = ["vulkan"]}
